# Kozak-DynamicalSystems.AdditiveNumberTheory

./: README.md  pyproject.toml
examples/: 01_poincare_and_kac.py  02_van_der_waerden.py  03_szemeredi_correspondence.py  04_sarkozy_squares.py
src/recurrence/: __init__.py  correspondence.py  equidistribution.py  multiple.py  poincare.py  systems.py  vanderwaerden.py
tests/: test_recurrence.py
